# incubator-uniffle

./: .asf.yaml  .gitignore  CONTRIBUTING.md  DISCLAIMER  LICENSE  LICENSE-binary  NOTICE  NOTICE-binary  README.md  build_distribution.sh  checkstyle-suppressions.xml  checkstyle.xml  lombok.config  mvnw  pom.xml  pom.xml.versionsBackup  security.md  spotbugs-exclude.xml
.github/: PULL_REQUEST_TEMPLATE
.github/ISSUE_TEMPLATE/: bug-report.yml  flaky-test-report.yml
.github/workflows/: build.yml  changes.yml  codeql.yml  compose.yml  deploy.yml  docker.yml  maven.yml  parallel.yml  rust.yml  sequential.yml  single.yml  test-results.yml
cli/: pom.xml
client/: pom.xml
client-flink/common/: pom.xml
client-flink/flink-1.14/: pom.xml
client-flink/flink-1.15/: pom.xml
client-mock-on-yarn/: README.md  pom.xml
client-mr/: pom.xml
client-mr/core/: pom.xml
client-mr/hadoop2.8/: pom.xml
client-mr/hadoop3.2/: pom.xml
client-spark/common/: pom.xml  pom.xml.versionsBackup
client-spark/spark2/: pom.xml
client-spark/spark2-shaded/: pom.xml
client-spark/spark3/: pom.xml  pom.xml.versionsBackup
client-spark/spark3-shaded/: pom.xml
client-spark/spark4/: pom.xml
client-spark/spark4-shaded/: pom.xml
client-tez/: pom.xml
common/: pom.xml
conf/: coordinator.conf  dashboard.conf  log4j.coordinator.properties  log4j.properties  log4j.shuffle_server.properties  log4j2.xml  rss-env.sh  server.conf
conf/local_dev/: dashboard.conf  log4j2.xml  server.conf
coordinator/: pom.xml
dashboard/: pom.xml
deploy/docker/: README.md  build.sh  docker-compose.yml
deploy/docker-compose/: README.md  docker-compose.yml
docs/: _config.yml  benchmark.md  benchmark_netty.md  benchmark_netty_case_report.md  client_guide.md  coordinator-migration-guide.md  coordinator_guide.md  dashboard_guide.md  gen-doc.sh  index.md  metrics_guide.md  pageA.md  remote_merge_guide.md  server_guide.md  troubleshooting.md  uniffle-migration-guide.md
internal-client/: pom.xml
licenses-binary/: LICENSE-axios.txt  LICENSE-core-js.txt  LICENSE-element-plus.txt  LICENSE-rimraf.txt  LICENSE-system-stubs-jupiter.txt  LICENSE-vue-resource.txt
metrics/: pom.xml
metrics-prometheus/: pom.xml
proto/: pom.xml
release/: create-package.sh  publish_maven_artifacts.sh  publish_to_svn.sh  utils.sh
rust/experimental/server/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
rust/experimental/server/.cargo/: config.toml
rust/experimental/server/src/: app.rs  await_tree.rs  channel.rs  config.rs  error.rs  grpc.rs  lib.rs  main.rs  metric.rs  readable_size.rs  signal.rs  util.rs
rust/experimental/server/src/http/: await_tree.rs  http_service.rs  jeprof.rs  metrics.rs  mod.rs  pprof.rs
rust/experimental/server/src/mem_allocator/: default.rs  error.rs  jemalloc.rs  mod.rs  profiling.rs  system_std.rs
rust/experimental/server/src/proto/: mod.rs  uniffle.proto  uniffle.rs
rust/experimental/server/src/runtime/: manager.rs  metrics.rs  mod.rs
rust/experimental/server/src/store/: hdfs.rs  hybrid.rs  localfile.rs  memory.rs  mod.rs
rust/experimental/server/src/store/local/: disk.rs  mod.rs
rust/experimental/server/src/store/mem/: mod.rs  ticket.rs
rust/experimental/server/tests/: graceful_shutdown.rs  lock_benchmark.rs  write_read.rs
server/: pom.xml  pom.xml.versionsBackup
server-common/: pom.xml
spark-patches/: spark-2.4.6_dynamic_allocation_support.patch  spark-3.1.2_dynamic_allocation_support.patch  spark-3.2.1_dynamic_allocation_support.patch
storage/: pom.xml
website/: docusaurus.config.js  package-lock.json  package.json
(+2123 files in other folders)
